day7/apps/nodejs/manifests/scm-textanalytics-function-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: scm-textanalytics-function-deploy 
  labels:
    application: scmcontacts
    service: scmtextanalyticsfunc
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmtextanalyticsfunc
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmtextanalyticsfunc
    spec:
      containers:
        - name: application
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          image:  azuredevcollege.azurecr.io/adcday7/scmtextanalytics:20200507.1
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: regcred
