day7/apps/nodejs/manifests/scm-visitreports-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-visitreports
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept-Language"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - http:
      paths:
      - path: /api/visitreports(/|$)(.*)
        backend:
          serviceName: visitreport
          servicePort: 8080
